# zippypack

./: Cargo.toml  LICENSE  README.md  README_FR.md  config.toml
docs/: ARCHITECTURE.md  ARCHITECTURE_FR.md
examples/: basic_usage.rs
src/: compress.rs  config.rs  decompress.rs  error.rs  image.rs  lib.rs  main.rs  metrics.rs  profile.rs
tools/: generate_test_files.rs
