[package]
name = "zippy"
version = "0.1.0"
edition = "2021"
authors = ["Zippy Team"]
description = "Un outil de compression moderne et intelligent pour les développeurs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
rayon = "1.7"
walkdir = "2.3"
zstd = { version = "0.12", features = ["zstdmt"] }
zstd-safe = "6"
tar = "0.4"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
num_cpus = "1.16"

[dev-dependencies]
tempfile = "3.8"
